# SecondhandTreasures

./: .gitignore  README.md  pyproject.toml
backend/config/: settings.py  urls.py
backend/order/: models.py  serializers.py  urls.py  views.py
backend/order/migrations/: 0001_initial.py
backend/products/: models.py  serializers.py  urls.py  views.py
backend/products/migrations/: 0001_initial.py  0002_product_quantity.py
frontend/: package-lock.json  package.json
frontend/public/: index.html
frontend/src/: App.vue  main.js
frontend/src/components/: CartItem.vue  OrderSummary.vue  ProductCard.vue
frontend/src/router/: index.js
frontend/src/store/: index.js
frontend/src/views/: CartView.vue  CartVue.vue  CategoryPage.vue  CheckoutView.vue  HomeView.vue  LogIn.vue  MyAccount.vue  ProductPage.vue  SearchView.vue  SearchVue.vue  SignUp.vue  SuccessView.vue
