[tool.poetry]
name = "secondhandtreasures"
version = "0.1.0"
description = ""
authors = ["Leonid Terletskyi <leo.terletskyi@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.2.2"
djangorestframework = "^3.14.0"
python-dotenv = "^1.0.0"
psycopg2-binary = "^2.9.6"
django-cors-headers = "^4.1.0"
djoser = "^2.2.0"
stripe = "^5.4.0"
pillow = "9.2.0"
django-versatileimagefield = "^3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
